# banking

./: README.md  pyproject.toml  requirements.txt
src/: decorators.py  external_api.py  file_loader.py  generators.py  main.py  masks.py  processing.py  regex_helpers.py  utils.py  widget.py
tests/: conftest.py  convert_to_rubles.py  load_transactions.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_regex_helpers.py  test_widget.py
